# ninja_D

./: db.sqlite3  manage.py  pyproject.toml
.github/workflows/: ci.yml
ninja_D/: asgi.py  settings.py  urls.py  wsgi.py
